--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     
     <!-- Configuration -->
-    <script src="config.js"></script>
+    <script src="config.public.js"></script>
     
     <!-- Firebase SDK -->
     <script type="module">
